WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
270333
[WebGPU] Fix RenderPipeline color format validation
https://bugs.webkit.org/show_bug.cgi?id=270333
Summary
[WebGPU] Fix RenderPipeline color format validation
Alex Christensen
Reported
2024-02-29 22:37:34 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2024-02-29 22:37:50 PST
<
rdar://problem/123810621
>
Alex Christensen
Comment 2
2024-02-29 22:42:18 PST
Pull request:
https://github.com/WebKit/WebKit/pull/25337
EWS
Comment 3
2024-03-01 06:37:22 PST
Committed
275550@main
(fcdb5d4b016f): <
https://commits.webkit.org/275550@main
> Reviewed commits have been landed. Closing PR #25337 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug