[WebGPU] Fix RenderPipeline color format validation https://bugs.webkit.org/show_bug.cgi?id=270333 rdar://123810621

Reviewed by Mike Wyrzykowski.

If fragment.targetCount is not equal to descriptor.colorFormatCount then we want to
verify that all color formats are undefined.  Otherwise, we want to verify that they
are all equal to the descriptor color formats.

* LayoutTests/fast/webgpu/render-bundle-validation-color-format-expected.txt: Added.
* LayoutTests/fast/webgpu/render-bundle-validation-color-format.html: Added.
* Source/WebGPU/WebGPU/RenderPipeline.mm:
(WebGPU::RenderPipeline::validateRenderBundle const):

Canonical link: https://commits.webkit.org/275550@main